<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="416dp"
        android:onClick="action"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/equals"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="164dp"
        android:onClick="equals"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/zero"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="164dp"
        android:onClick="insertNumber"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/divide"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="40dp"
        android:onClick="action"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/eight"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="164dp"
        android:text="@string/eight"
        android:onClick="insertNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="468dp"
        android:onClick="action"
        android:text="@string/minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/multiplication"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="40dp"
        android:onClick="action"
        android:text="@string/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/nine"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="40dp"
        android:text="@string/nine"
        android:onClick="insertNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/seven"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:text="@string/seven"
        android:onClick="insertNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/five"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="164dp"
        android:onClick="insertNumber"
        android:text="@string/five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/six"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="40dp"
        android:onClick="insertNumber"
        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/four"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:onClick="insertNumber"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="322dp"
        android:layout_height="42dp"
        android:text="0"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/one"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:onClick="insertNumber"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/two"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="164dp"
        android:onClick="insertNumber"
        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/three"
        android:layout_width="80dp"
        android:layout_height="104dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/three"
        android:onClick="insertNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/clr"
        android:layout_width="36dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/clr"
        android:textSize="7sp"
        android:onClick="clear"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>